fix request portfolio

--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -23,16 +23,16 @@
         <img src="./img/logo.png" />
         <ul class="primary_color">
             <li>
-                <a href="index.html">Progetti</a>
+                <a href="index.html">Projects</a>
             </li>
             <li>
-                <a href="#about">Su di me</a>
+                <a href="#about">About</a>
             </li>
             <li>
-                <a href="#contact">Contatti</a>
+                <a href="#contact">Contacts</a>
             </li>
             <li>
-                <a href="index_en.html" title="English website">EN</a> | <a href="#" title="sito italiano" style="color:black;">IT</a>
+                <a href="#" title="English website" style="color: black;">EN</a> | <a href="index.html" title="sito italiano">IT</a>
             </li>
         </ul>
     </nav>
@@ -65,7 +65,7 @@
             <div class="container_info">
                 <h2 class="primary_text">Ivan Sokolov</h2>
                 <hr>
-                <p style="align-self: flex-end;" class="primary_color">Su di me</p>
+                <p style="align-self: flex-end;" class="primary_color">About</p>
             </div>
         </div>
     </article>
@@ -99,9 +99,9 @@
             <div style="width: 16.6%;"></div>
             <div class="container_text" style="justify-content: flex-start;">
                 <div class="container_info">
-                    <h2 class="primary_text">Contatti</h2>
+                    <h2 class="primary_text">Contacts</h2>
                     <hr>
-                    <p style="align-self: flex-end;" class="primary_color">Restiamo in contatto</p>
+                    <p style="align-self: flex-end;" class="primary_color">Keep in touch</p>
                 </div>
             </div>
         </div>
