--- a/en/index.html
+++ b/en/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./mobile css/mobile.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../mobile css/mobile.css" />
+    <script src="../script.js" defer></script>
     <title>Ivan Sokolov</title>
 </head>
 
@@ -16,11 +16,11 @@
     <!-- FIRST ARTICLE-->
     <!-- NAVBAR MOBILE-->
     <div class="navbar_mobile">
-        <img src="./img/logo.png" alt="logo">
+        <img src="../img/logo.png" alt="logo">
     </div>
     <!-- NAVBAR -->
     <nav id="project">
-        <img src="./img/logo.png" />
+        <img src="../img/logo.png" alt="ivan sokolov's logo"/>
         <ul class="primary_color">
             <li>
                 <a href="index.html">Projects</a>
@@ -47,15 +47,15 @@
             </div>
         </div>
         <div class="container_img">
-            <a id="a_standard" href="./pages/fibra.html">
-                <img id="img_standard" alt="fibra" src="./img/11.jpg" />
+            <a id="a_standard" href="../pages/fibra.html">
+                <img id="img_standard" alt="fibra" src="../img/11.jpg" />
             </a>
         </div>
     </main>
 
     <article style="margin-bottom: 117px;" id="about">
         <div class="container_img" style="width: 66.4%;">
-            <img alt="sokolov" src="./img/sokolov.jpg" />
+            <img alt="sokolov" src="../img/sokolov.jpg" />
         </div>
     </article>
 
@@ -85,11 +85,11 @@
 
     <article>
         <div class="container_img" style="width: 33%;">
-            <img alt="ivan1" src="./img/ivan1.jpg" />
+            <img alt="ivan1" src="../img/ivan1.jpg" />
         </div>
         <hr style="padding: 0.2%; margin: 0; border: 0;">
         <div class="container_img" style="width: 33%;">
-            <img alt="ivan" src="./img/ivan.jpg" />
+            <img alt="ivan" src="../img/ivan.jpg" />
         </div>
     </article>
 
@@ -149,7 +149,7 @@
                     <hr style="margin-bottom: 10px; margin-top: 5px;">
                     <p id="portfolio-request-answer"></p>
                 </div>
-                <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3" src="./img/arrow-right.png" alt="arrow" />
+                <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3" src="../img/arrow-right.png" alt="arrow" />
             </div>
         </div>
     </footer>
