--- a/it/index.html
+++ b/it/index.html
@@ -136,7 +136,7 @@
             <div style="width: 16.6%;"></div>
             <div class="container_text" style="justify-content: flex-start; width: 33.2%;">
                 <div class="container_info">
-                    <h2 class="primary_text">Request portfolio</h2>
+                    <h2 class="primary_text">Richiedi portfolio</h2>
                     <hr style="margin-bottom: 10px; margin-top: 5px;">
                 </div>
             </div>
@@ -145,7 +145,7 @@
             <div style="width: 16.6%;"></div>
             <div class="container_text" style="justify-content: flex-start; width: 33.2%;">
                 <div class="container_info">
-                    <input id="portfolio-request-email" type="email" style="border: 0" placeholder="Type your mail here">
+                    <input id="portfolio-request-email" type="email" style="border: 0" placeholder="Scrivi qui la tua email">
                     <hr style="margin-bottom: 10px; margin-top: 5px;">
                     <p id="portfolio-request-answer"></p>
                 </div>
