--- a/en/index.html
+++ b/en/index.html
@@ -32,7 +32,7 @@
                 <a href="#contact">Contacts</a>
             </li>
             <li>
-                <a href="#" title="English website" style="color: black;">EN</a> | <a href="index.html" title="sito italiano">IT</a>
+                <a href="#" title="English website" style="color: black;">EN</a> | <a href="../it/index.html" title="sito italiano">IT</a>
             </li>
         </ul>
     </nav>
@@ -74,13 +74,9 @@
         <div style="width: 16.6%;"></div>
         <div style="width: 16.6%;"></div>
         <p style="align-self: center; width: 33.2%; font-size: 30px;">
-            Ivan è un regista efotografo con sede in Svizzera.
-            Si occupa principalmente di produzioni commerciali, musicali e aziendali.
-            Il suo background spazia dalla fotografia e riprese di
-            concerti, eventi e sport alla regia su set artificiali e alla fotografia in studio. Produce anche
-            cortometraggi come Limbo (2001) e To a Hard knot a Sharp Blade (2022) ed è presentatore video nel progetto
-            RSI EDU. Grazie alla sua esperienza in diverse aziende e settori, può portare a termine progetti video/foto
-            da solo o svolgere un ruolo individuale all'interno di un team più ampio.</p>
+            I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio. Following big Italian artists on tour, I have also gained a lot of experience as a concert and event photographer.
+            Cinema is my greatest passion. Hence also the desire to produce and direct short films, as in the case of "Limbo" (2021) and "To a Hard Knot a Sharp Blade" (2022) and several projects still in progress.
+            Thanks to experience with different agencies fields, I am able to both direct a project, as well as playing an individual role within a larger team.</p>
     </article>
 
     <article>
