--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../mobile css/mobile.css" />
     <script src="../script.js" defer></script>
+    <script src="../projects.js" defer></script>
     <title>Ivan Sokolov</title>
 </head>
 
@@ -23,7 +24,7 @@
         <img src="../img/logo.png" alt="ivan sokolov's logo"/>
         <ul class="primary_color">
             <li>
-                <a href="index.html">Projects</a>
+                <a href="#">Projects</a>
             </li>
             <li>
                 <a href="#about">About</a>
@@ -32,7 +33,7 @@
                 <a href="#contact">Contacts</a>
             </li>
             <li>
-                <a href="#" title="English website" style="color: black;">EN</a> | <a href="../it/index.html" title="sito italiano">IT</a>
+                <a href="#" title="English website" style="color: black;">EN</a> | <a href="../it/" title="sito italiano">IT</a>
             </li>
         </ul>
     </nav>
