--- a/it/index.html
+++ b/it/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../mobile css/mobile.css" />
     <script src="../script.js" defer></script>
+    <script src="../projects.js" defer></script>
     <title>Ivan Sokolov</title>
 </head>
 
@@ -23,7 +24,7 @@
         <img src="../img/logo.png" />
         <ul class="primary_color">
             <li>
-                <a href="index.html">Progetti</a>
+                <a href="#">Progetti</a>
             </li>
             <li>
                 <a href="#about">Su di me</a>
@@ -32,7 +33,7 @@
                 <a href="#contact">Contatti</a>
             </li>
             <li>
-                <a href="../en/index.html" title="English website">EN</a> | <a href="#" title="sito italiano" style="color:black;">IT</a>
+                <a href="../en/#" title="English website">EN</a> | <a href="#" title="sito italiano" style="color:black;">IT</a>
             </li>
         </ul>
     </nav>
