--- a/pages/fibra.html
+++ b/pages/fibra.html
@@ -39,6 +39,7 @@
                 <hr>
                 <p id="third" style="align-self: flex-end;" class="primary_color">Fotografia</p>
             </div>
+        </div>
     </article>
 
     <!-- HEADER -->
