--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
         </ul>
     </nav>
     <main style="margin-top: 90px;">
-        <div class="container_text" style="align-self: end; justify-content: flex-start;">
+        <div class="container_text" style="align-self: end; justify-content: flex-start;margin-right: 16.6vw">
             <div class="container_info">
                 <h2 id="first" class="primary_text">Fabri Fibra</h2>
                 <hr>
@@ -49,7 +49,7 @@
         </div>
         <div class="container_img">
             <a id="a_standard" href="../pages/fibra.html">
-                <img id="img_standard" alt="fibra" src="../img/11.jpg" />
+                <img id="img_standard" alt="fibra" src="../img/11.jpg" style="width: 33vw"/>
             </a>
         </div>
     </main>
@@ -60,8 +60,7 @@
         </div>
     </article>
 
-    <article style="justify-content: flex-start; margin-bottom: 56px;">
-        <div style="width: 16.6%;"></div>
+    <article id="aboutTitle" style="justify-content: flex-start; margin-bottom: 56px;">
         <div class="container_text" style="justify-content: flex-start;">
             <div class="container_info">
                 <h2 class="primary_text">Ivan Sokolov</h2>
@@ -71,16 +70,14 @@
         </div>
     </article>
 
-    <article style="justify-content: flex-start; margin-bottom: 209px;">
-        <div style="width: 16.6%;"></div>
-        <div style="width: 16.6%;"></div>
-        <p style="align-self: center; width: 33.2%; font-size: 30px;">
+    <article id="aboutDesc" style="justify-content: flex-start; margin-bottom: 209px;margin-left: 16.6vw">
+        <p style="align-self: center; width: 33vw;">
             I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio. Following big Italian artists on tour, I have also gained a lot of experience as a concert and event photographer.
             Cinema is my greatest passion. Hence also the desire to produce and direct short films, as in the case of "Limbo" (2021) and "To a Hard Knot a Sharp Blade" (2022) and several projects still in progress.
             Thanks to experience with different agencies fields, I am able to both direct a project, as well as playing an individual role within a larger team.</p>
     </article>
 
-    <article>
+    <article id="aboutPhoto">
         <div class="container_img" style="width: 33%;">
             <img alt="ivan1" src="../img/ivan1.jpg" />
         </div>
@@ -92,8 +89,7 @@
 
     <!-- FOOTER-->
     <footer id="contact">
-        <div style=" display: flex; margin-bottom: 200px;">
-            <div style="width: 16.6%;"></div>
+        <div class="contactHeader" style=" display: flex; margin-bottom: 200px;">
             <div class="container_text" style="justify-content: flex-start;">
                 <div class="container_info">
                     <h2 class="primary_text">Contacts</h2>
@@ -102,8 +98,7 @@
                 </div>
             </div>
         </div>
-        <div style=" display: flex; margin-bottom: 200px;">
-            <div style="width: 16.6%;"></div>
+        <div class="contactBlocks" style=" display: flex; margin-bottom: 200px;">
             <div class="container_text" style="justify-content: flex-start; width: 66.4%;">
                 <div class="container_info contact">
                     <h2 class="primary_text">
@@ -111,7 +106,7 @@
                     <hr>
                 </div>
                 <hr style="padding: 1%; margin: 0; border: 0;">
-                <div class="container_info contact">
+                <div class="container_info contact contact-right">
                     <h2 class="primary_text">
                         <a href="tel:+41 76 244 07 67" title="phone number">Phone</a></h2>
                     <hr>
@@ -123,14 +118,14 @@
                     <hr>
                 </div>
                 <hr style="padding: 1%; margin: 0; border: 0;">
-                <div class="container_info contact">
+                <div class="container_info contact contact-right">
                     <h2 class="primary_text">Twitter</h2>
                     <hr>
                 </div>
+                <div style="clear: both"></div>
             </div>
         </div>
-        <div style=" display: flex;">
-            <div style="width: 16.6%;"></div>
+        <div class="contactRequestPortfolio" style=" display: flex;">
             <div class="container_text" style="justify-content: flex-start; width: 33.2%;">
                 <div class="container_info">
                     <h2 class="primary_text">Request portfolio</h2>
@@ -138,8 +133,7 @@
                 </div>
             </div>
         </div>
-        <div style=" display: flex; margin-bottom: 200px;">
-            <div style="width: 16.6%;"></div>
+        <div class="contactRequestPortfolioInsert" style=" display: flex; margin-bottom: 200px;">
             <div class="container_text" style="justify-content: flex-start; width: 33.2%;">
                 <div class="container_info">
                     <input id="portfolio-request-email" type="email" style="border: 0" placeholder="Type your mail here">
