--- a/en/project/index.html
+++ b/en/project/index.html
@@ -26,14 +26,13 @@
 <nav style="margin-top: -200px;">
     <img src="../../img/logo.png" alt="logo">
     <div style="display: flex; justify-content: flex-end; margin-top: 140px;">
-        <a href="../index.html">
+        <a href="../">
             <img class="arrow_desktop" src="../../img/arrow-left.png" alt="arrow"/>
         </a>
     </div>
 </nav>
 
 <article style="justify-content: flex-start; margin-top: 290px;margin-bottom: 0;">
-    <div style="width: 16.6%;"></div>
     <div class="container_text" style="justify-content: flex-start;">
         <div class="container_info">
             <h2 id="first" class="primary_text">Fabri Fibra</h2>
