--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<meta name=”robots” content="index, follow">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
+<body>
+<a title="Ivan Sokolov - English Website" href="en">Ivan Sokolov - English website</a>
+<a title="Ivan Sokolov - Sito Italiano" href="it">Ivan Sokolov - Sito italiano</a>
 <script type="text/javascript">
   var userLang = navigator.language || navigator.userLanguage;
   if (userLang.includes("it")) {
@@ -21,4 +24,5 @@
     window.location.href = "https://ivansokolov.ch/en";
   }
 </script>
+</body>
 </html>
