--- a/en/index.html
+++ b/en/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="keywords" content="Ivan, Sokolov, Ivan Sokolov, video, photograpy, videomaker, photographer, fotografia">
+    <meta name="og:title" content="Ivan Sokolov">
+    <meta name="description" content="I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio.">
+    <meta name="og:description" content="I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio.">
+    <meta name=”robots” content="index, follow">
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../mobile css/mobile.css" />
     <script src="../script.js" defer></script>
