--- a/en/project/index.html
+++ b/en/project/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="../../mobile css/mobile.css"/>
     <script src="../../script.js" defer></script>
     <script src="../../project.js" defer></script>
+    <meta name="keywords" content="Ivan, Sokolov, Ivan Sokolov, video, photograpy, videomaker, photographer, fotografia">
+    <meta name="og:title" content="Ivan Sokolov">
+    <meta name="description" content="I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio.">
+    <meta name="og:description" content="I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio.">
+    <meta name=”robots” content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ivan Sokolov</title>
 </head>
 
