--- a/it/project/index.html
+++ b/it/project/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+  <meta name="keywords" content="Ivan, Sokolov, Ivan Sokolov, video, photograpy, videomaker, photographer, fotografia">
+  <meta name="og:title" content="Ivan Sokolov">
+  <meta name="description" content="Sono un videomaker e fotografo con sede a Zurigo, in Svizzera. Mi occupo principalmente di produzioni pubblicitarie, musicali e aziendali, lavorando sia in ambiente di luce naturale, che in studio.">
+  <meta name="og:description" content="Sono un videomaker e fotografo con sede a Zurigo, in Svizzera. Mi occupo principalmente di produzioni pubblicitarie, musicali e aziendali, lavorando sia in ambiente di luce naturale, che in studio.">
+  <meta name=”robots” content="index, follow">
   <link rel="stylesheet" href="../../style.css"/>
   <link rel="stylesheet" href="../../mobile css/mobile.css"/>
   <script src="../../script.js" defer></script>
