--- a/en/index.html
+++ b/en/index.html
@@ -42,6 +42,14 @@
             </li>
         </ul>
     </nav>
+    
+    <main style="margin-top: 90px;">
+        <div class="container_img">
+            <a id="a_standard" href="../pages/fibra.html">
+                <img id="img_standard" alt="fibra" src="../img/11.jpg" style="width: 33vw"/>
+            </a>
+        </div>
+    </main>
 
     <article style="margin-bottom: 117px;" id="about">
         <div class="container_img" style="width: 66.4%;">
