--- a/en/index.html
+++ b/en/index.html
@@ -25,7 +25,7 @@
         <img src="../img/logo.png" alt="logo">
     </div>
     <!-- NAVBAR -->
-    <nav id="project">
+    <nav id="project" style="padding-top: 90px;">
         <img src="../img/logo.png" alt="ivan sokolov's logo"/>
         <ul class="primary_color">
             <li>
@@ -42,12 +42,13 @@
             </li>
         </ul>
     </nav>
-    
-    <main style="margin-top: 90px;">
-        <div class="container_img">
-            <a id="a_standard" href="../pages/fibra.html">
-                <img id="img_standard" alt="fibra" src="../img/11.jpg" style="width: 33vw"/>
-            </a>
+
+    <main style="position: absolute;">
+        <div class="container_text" style="align-self: end; justify-content: flex-start;margin-right: 16.6vw; display: none!important;">
+            <div class="container_info">
+                <!-- SLIDER -->
+                <div class="slides"></div>
+            </div>
         </div>
     </main>
 
@@ -69,9 +70,8 @@
 
     <article id="aboutDesc" style="justify-content: flex-start; margin-bottom: 209px;margin-left: 16.6vw">
         <p style="align-self: center; width: 33vw;">
-            I am a videomaker and photographer based in Zurich, Switzerland. I mainly focus on advertising, music and corporate productions, working both with natural light and in the studio. Following big Italian artists on tour, I have also gained a lot of experience as a concert and event photographer.
-            Cinema is my greatest passion. Hence also the desire to produce and direct short films, as in the case of "Limbo" (2021) and "To a Hard Knot a Sharp Blade" (2022) and several projects still in progress.
-            Thanks to experience with different agencies fields, I am able to both direct a project, as well as playing an individual role within a larger team.</p>
+            I am a videomaker and photographer based in Zurich. My main focus is on advertising, music and corporate productions. Following big Italian artists on tour, I have also gained a lot of experience as a concert and event photographer. Cinema is my greatest passion, hence also the desire to produce and direct short films, as in the case of "Limbo" (2021), "To a Hard Knot a Sharp Blade" (2022), the upcoming “Non ti sento” (2023/24) and several projects still in progress. Through experiences with many different agencies and clients, as well as in a variety of fields, I lean toward both leading a project as well as playing an individual role within a larger team.
+        </p>
     </article>
 
     <article id="aboutPhoto">
@@ -111,12 +111,16 @@
                 <hr style="padding: 1%; margin: 0; border: 0;">
                 <div class="container_info contact">
                     <h2 class="primary_text">
-                        <a href="https://www.instagram.com/ivan_sokolov_/" title="@ivan_sokolov_ - instagram">Instagram</a></h2>
+                        <a href="https://www.instagram.com/ivan_sokolov_/" title="@ivan_sokolov_ - instagram" target="_blank">Instagram</a></h2>
                     <hr>
                 </div>
                 <hr style="padding: 1%; margin: 0; border: 0;">
                 <div class="container_info contact contact-right">
-                    <h2 class="primary_text">Twitter</h2>
+                    <h2 class="primary_text">
+                        <a href="https://vimeo.com/ivansokolov" title="Ivan Sokolov - Vimeo" target="_blank">
+                            Vimeo
+                        </a>
+                    </h2>
                     <hr>
                 </div>
                 <div style="clear: both"></div>
@@ -137,7 +141,7 @@
                     <hr style="margin-bottom: 10px; margin-top: 5px;">
                     <p id="portfolio-request-answer"></p>
                 </div>
-                <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3" src="../img/arrow-right.png" alt="arrow" />
+                <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3; cursor: pointer;" src="../img/arrow-right.png" alt="arrow"/>
             </div>
         </div>
     </footer>
