--- a/en/project/index.html
+++ b/en/project/index.html
@@ -20,7 +20,7 @@
 
 <body class="project">
 <div id="fabri_fibra" class="navbar_mobile">
-    <a href="../">
+    <a href="../" title="home page">
         <img src="../../img/logo.png" alt="logo">
     </a>
     <a href="../" title="home page" class="arrow">
@@ -30,9 +30,11 @@
 
 <!-- NAVBAR -->
 <nav style="margin-top: -200px;">
-    <img src="../../img/logo.png" alt="logo">
+    <a href="../" title="home page">
+        <img src="../../img/logo.png" alt="logo">
+    </a>
     <div style="display: flex; justify-content: flex-end; margin-top: 140px;">
-        <a href="../">
+        <a href="../" title="home page">
             <img class="arrow_desktop" src="../../img/arrow-left.png" alt="arrow"/>
         </a>
     </div>
@@ -83,12 +85,16 @@
             <hr style="padding: 1%; margin: 0; border: 0;">
             <div class="container_info contact">
                 <h2 class="primary_text">
-                    <a href="https://www.instagram.com/ivan_sokolov_/" title="@ivan_sokolov_ - instagram">Instagram</a></h2>
+                    <a href="https://www.instagram.com/ivan_sokolov_/" title="@ivan_sokolov_ - instagram" target="_blank">Instagram</a></h2>
                 <hr>
             </div>
             <hr style="padding: 1%; margin: 0; border: 0;">
             <div class="container_info contact contact-right">
-                <h2 class="primary_text">Twitter</h2>
+                <h2 class="primary_text">
+                <a href="https://vimeo.com/ivansokolov" title="Ivan Sokolov - Vimeo" target="_blank">
+                    Vimeo
+                </a>
+                </h2>
                 <hr>
             </div>
             <div style="clear: both"></div>
@@ -109,7 +115,7 @@
                 <hr style="margin-bottom: 10px; margin-top: 5px;">
                 <p id="portfolio-request-answer"></p>
             </div>
-            <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3" src="../../img/arrow-right.png" alt="arrow" />
+            <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3;cursor: pointer;" src="../../img/arrow-right.png" alt="arrow"/>
         </div>
     </div>
 </footer>
