--- a/it/index.html
+++ b/it/index.html
@@ -25,7 +25,7 @@
     <img src="../img/logo.png" alt="logo">
 </div>
 <!-- NAVBAR -->
-<nav id="project">
+<nav id="project" style="padding-top: 90px;">
     <img src="../img/logo.png" alt="ivan sokolov's logo"/>
     <ul class="primary_color">
         <li>
@@ -42,6 +42,15 @@
         </li>
     </ul>
 </nav>
+
+<main style="position: absolute;">
+    <div class="container_text" style="align-self: end; justify-content: flex-start;margin-right: 16.6vw; display: none!important;">
+        <div class="container_info">
+            <!-- SLIDER -->
+            <div class="slides"></div>
+        </div>
+    </div>
+</main>
 
 <article style="margin-bottom: 117px;" id="about">
     <div class="container_img" style="width: 66.4%;">
@@ -61,9 +70,8 @@
 
 <article id="aboutDesc" style="justify-content: flex-start; margin-bottom: 209px;margin-left: 16.6vw">
     <p style="align-self: center; width: 33vw;">
-        Sono un videomaker e fotografo con sede a Zurigo, in Svizzera. Mi occupo principalmente di produzioni pubblicitarie, musicali e aziendali, lavorando sia in ambiente di luce naturale, che in studio. Seguendo grandi artisti italiani in tour ho anche acquisito tanta esperienza come fotografo di concerti e di eventi.
-        Il cinema è la mia più grande passione. Da qui deriva anche il desiderio di produrre e dirigere cortometraggi, come nel caso di "Limbo" (2021), di "To a Hard Knot a Sharp Blade" (2022) e di svariati progetti ancora in corso.
-        Grazie a esperienze con diverse agenzie e in svariati settori, posso sia dirigere un progetto, che svolgere un ruolo individuale all'interno di un team più ampio.</p>
+        Sono un videomaker e fotografo con sede a Zurigo. Mi occupo principalmente di produzioni pubblicitarie, musicali e aziendali. Seguendo grandi artisti italiani in tour ho anche acquisito tanta esperienza come fotografo di concerti e di eventi. Il cinema è la mia più grande passione, da qui deriva anche il desiderio di produrre e dirigere cortometraggi, come nel caso di "Limbo" (2021), "To a Hard Knot a Sharp Blade" (2022), “Non ti sento” (2023/24, in produzione) e di svariati progetti ancora in corso. Grazie a esperienze con diverse agenzie e clienti, così come in svariati settori, mi oriento sia verso la direzione di un progetto che verso un ruolo individuale all'interno di un team più ampio.
+    </p>
 </article>
 
 <article id="aboutPhoto">
@@ -103,12 +111,16 @@
             <hr style="padding: 1%; margin: 0; border: 0;">
             <div class="container_info contact">
                 <h2 class="primary_text">
-                    <a href="https://www.instagram.com/ivan_sokolov_/" title="@ivan_sokolov_ - instagram">Instagram</a></h2>
+                    <a href="https://www.instagram.com/ivan_sokolov_/" title="@ivan_sokolov_ - instagram" target="_blank">Instagram</a></h2>
                 <hr>
             </div>
             <hr style="padding: 1%; margin: 0; border: 0;">
             <div class="container_info contact contact-right">
-                <h2 class="primary_text">Twitter</h2>
+                <h2 class="primary_text">
+                <a href="https://vimeo.com/ivansokolov" title="Ivan Sokolov - Vimeo" target="_blank">
+                    Vimeo
+                </a>
+                </h2>
                 <hr>
             </div>
             <div style="clear: both"></div>
@@ -129,7 +141,7 @@
                 <hr style="margin-bottom: 10px; margin-top: 5px;">
                 <p id="portfolio-request-answer"></p>
             </div>
-            <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3" src="../img/arrow-right.png" alt="arrow" />
+            <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3; cursor: pointer;" src="../img/arrow-right.png" alt="arrow" />
         </div>
     </div>
 </footer>
