--- a/it/project/index.html
+++ b/it/project/index.html
@@ -110,7 +110,7 @@
         <hr style="margin-bottom: 10px; margin-top: 5px;">
         <p id="portfolio-request-answer"></p>
       </div>
-      <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;opacity: .3;cursor: pointer;" src="../../img/arrow-right.png" alt="arrow"/>
+      <img class="arrow_desktop" id="portfolio-request-submit" style="margin-left: 50px;cursor: pointer;" src="../../img/arrow-right.png" alt="arrow"/>
     </div>
   </div>
 </footer>
